# cthughax

./: .gitignore  AUTHORS.md  CMakeLists.txt  CoreOptionTODO.md  CurrentTargetDisplayArchitectureDelta.md  DisplayRefactorTODO.md  DisplayTargetArchitecture.md  ExplicitDependencyRefactorPlan.md  IMAGE_GENERATION.md  INSTALL.md  LICENSE-STATUS.md  Makefile.am  Makefile.pre  PROJECT_BUILD_AND_PORTING.md  PROJECT_MAIN_LOOP_EXPLAINED.md  PROJECT_RUNTIME_MAP.md  PROJECT_SEAMS_AND_RISKS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  PROJECT_VERIFICATION.md  PhasedRefactorApproach.md  Porting.md  README  README.md  RELEASE_NOTES.md  TODO.md  WaveAndFlameCatalog.md  configure.in  cthugha-L.lsm  cthugha.ini.eg  dos-fidelity.ini  etch-build.md  fortune.txt  runtime-notes.md  timing
CthughaX.app/Contents/: Info.plist
CthughaX.app/Contents/Applications/CthughaX Panel.app/Contents/: Info.plist
CthughaX.app/Contents/Applications/CthughaX Panel.app/Contents/MacOS/: cthugha-panel
CthughaX.app/Contents/Applications/CthughaX Panel.app/Contents/_CodeSignature/: CodeResources
CthughaX.app/Contents/MacOS/: CthughaX  cthugha  cthugha-panel
CthughaX.app/Contents/Resources/resources/img/: cthugha.pcx  torus.pcx  zaph.pcx
CthughaX.app/Contents/Resources/resources/macos/: cthughax-panel.icns
CthughaX.app/Contents/Resources/resources/map/: 560sel.map  8rain.map  8rain2.map  8temp.map  VOLCANO6.map  altern.map  bandw.map  basic.map  bbr001.map  blend1.map  blend3.map  blend4.map  blend8.map  bluein.map  blues.map  bluorng.map  chroma2.map  chroma3.map  chroma4.map  chroma5.map  clouds.map  coldfire.map  cool.map  darkie.map  egan2.map  egan3.map  egan4.map  fadechr1.map  fadern2.map  fadern3.map  fadern4.map  fire2.map  firestrm.map  fourain2.map  frcoast.map  froth3.map  froth316.map  froth6.map  gamma1.map  glasses1.map  (+61 more)
CthughaX.app/Contents/_CodeSignature/: CodeDirectory  CodeResources
cmake/: config.h.in  generate_keymap.cmake
doc/: cthugha.1  cthugha.texi  introduction.texi  mixed.texi  overview.texi  parameters.texi  technical.texi
map/: 8temp.map  altern.map  chroma.map  chroma5.map  egasoft.map  froth316.map  green.map  grey.map  landscap.map  softega.map  stripe3.map
project-docs/: BUILD_SYSTEM.md
resources/img/: ill.pcx  sti_ephr.pcx  teardrop.pcx
resources/macos/: cthughax.icns
resources/tab/: gentable.cmd  hurricane.cmd  randswirls.cmd  rotate.cmd  smoke.cmd  yin-yang.cmd
src/: Application.cc  Application.h  ApplicationDisplayFrontend.cc  ApplicationDisplayFrontend.h  Audio.cc  Audio.h  AudioAnalysisSnapshot.cc  AudioAnalysisSnapshot.h  AudioAnalyzer.cc  AudioAnalyzer.h  AudioDSPOutput.cc  AudioFftProcessor.cc  AudioFftProcessor.h  AudioFrame.cc  AudioFrame.h  AudioFramePipeline.cc  AudioFramePipeline.h  AudioIngest.cc  AudioIngest.h  AudioInputProcessor.cc  AudioInternal.cc  AudioInternal.h  AudioMiniAudioOutput.cc  AudioOptions.h  AudioOutput.cc  AudioOutputConfig.cc  AudioOutputConfig.h  AudioOutputDump.cc  AudioOutputDump.h  AudioPassthrough.cc  AudioPassthrough.h  AudioProcessing.h  AudioProcessingSelector.cc  AudioProcessingState.cc  AudioProcessor.cc  AudioProcessor.h  AudioPulseOutput.cc  AudioRuntime.cc  AudioRuntime.h  AudioSettings.cc  (+393 more)
tab/: CMakeLists.txt  cmdRead.cc  cmd_bighalfwheel.c  cmd_downspiral.c  cmd_gentable.c  cmd_huricn.c  cmd_randswirls.c  cmd_smoke.c  cmd_space.c
tests/: CMakeLists.txt
tests/benchmarks/: AudioPipelineBench.cc  CMakeLists.txt  DisplayScreensBench.cc  FrameEffectsBench.cc  README.md  VideoEffectsBench.cc  VisualEffectsBench.cc
tests/fixtures/audio/: README.md  prism-2s-48000-stereo-s16le.raw
tests/fixtures/ini/perf/: 00.ini  01.ini  02.ini  03.ini  perf.scenescript
tests/fixtures/visual/: 1024x768-fixture.pgm  1600-x1200-fixture.pgm  640x480-fixture.pgm  800x600-fixture.pgm  README.md
tests/headers/: check-headers.sh
tests/smoke/: MiniAudioCaptureSmoke.cc  MiniAudioFilePassthroughSmoke.cc  MiniAudioPlaybackOpenSmoke.cc  MiniAudioSineSmoke.cc
tests/unit/: AudioDecodedHistoryTest.cc  AudioDeviceNegotiationTest.cc  AudioFramePipelineTest.cc  AudioFrameProcessorTest.cc  AudioIngestTest.cc  AudioOutputConfigTest.cc  AudioOutputDumpTest.cc  AudioPassthroughTest.cc  AudioVisualBridgeAutoChangerTest.cc  AudioVisualBridgeFrameTest.cc  AutoChangerCommandSinkTest.cc  CommandsInputRuntimeTest.cc  ConfigurationDependencyBoundaryTest.cc  ConfigurationTest.cc  ControlCommandMapperTest.cc  ControlProtocolTest.cc  ControlRuntimeObserverTest.cc  ControlServiceIntegrationTest.cc  ControlSnapshotTest.cc  ControlTransportTest.cc  CthughaDisplayPresentationTest.cc  CthughaDisplayViewportTest.cc  DisplayDrawModeTest.cc  DisplayGeometryTest.cc  DisplayOwnershipTest.cc  DisplayRefactorBoundaryTest.cc  DisplayRuntimeTest.cc  EffectControlRandomTest.cc  EffectPresetCatalogTest.cc  FlameStorageLayoutTest.cc  FrameClockTest.cc  FrameFilterchainDiagnosticsTest.cc  FrameFilterchainUserStagesTest.cc  FrameGeneratorBoundaryTest.cc  FrameGeneratorContextTest.cc  FrameGeneratorFrameBudgetTest.cc  FramePacerTest.cc  FrameStoreTest.cc  FrameTransitionControllerTest.cc  GeneralFlameOptionTest.cc  (+52 more)
tools/: compile-wire-obj.py  irregular-tetrahedron.wire  package_macos_app.py  run_display_screens_benchmarks.py  run_scene_script_benchmark.py  run_visual_effects_benchmarks.py
wx/: CthughaPanel.cpp  CthughaPanel.h  CthughaPanelApp.cc  CthughaPanelBase.cpp  CthughaPanelBase.h  CthughaPanelFrame.cpp  CthughaPanelFrame.h  WxControlPanelService.cpp  panel.fbp
