cmake_minimum_required(VERSION 3.16)

project(CthughaNix VERSION 1.5 LANGUAGES C CXX)

include(CheckFunctionExists)
include(CheckIncludeFile)
include(CheckIncludeFileCXX)
include(GNUInstallDirs)
include(TestBigEndian)

option(CTH_BUILD_X11 "Build the modern X11 frontend" ON)
option(CTH_BUILD_TAB_TOOLS "Build translation table helper tools" ON)
option(CTH_ENABLE_PULSE "Enable PulseAudio-compatible output when libpulse-simple is available" ON)
option(CTH_ENABLE_DSP "Enable OSS /dev/dsp support when soundcard headers are available" ON)
option(CTH_ENABLE_CDROM "Enable legacy CD-ROM controls when headers are available" OFF)
option(CTH_ENABLE_MIXER "Enable OSS mixer controls when soundcard headers are available" ON)
option(CTH_ENABLE_MINIMP3 "Enable embedded minimp3 decoding" ON)
option(CTH_ENABLE_XPM "Enable XPM screenshots when Xpm is available" ON)

set(CTH_DEV_DSP "/dev/dsp" CACHE STRING "Default OSS DSP device")
set(CTH_DEV_CDROM "/dev/cdrom" CACHE STRING "Default CD-ROM device")
set(CTH_DEV_MIXER "/dev/mixer" CACHE STRING "Default OSS mixer device")
set(CTH_DATA_DIR "${CMAKE_INSTALL_FULL_DATADIR}/cthughanix" CACHE PATH
    "Installed runtime data directory")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED OFF)
set(CMAKE_CXX_EXTENSIONS ON)

check_include_file(dirent.h HAVE_DIRENT_H)
check_include_file(endian.h HAVE_ENDIAN_H)
check_include_file(fcntl.h HAVE_FCNTL_H)
check_include_file(getopt.h HAVE_GETOPT_H)
check_include_file(linux/cdrom.h HAVE_LINUX_CDROM_H)
check_include_file(linux/joystick.h HAVE_LINUX_JOYSTICK_H)
check_include_file(linux/soundcard.h HAVE_LINUX_SOUNDCARD_H)
check_include_file(ncurses.h HAVE_NCURSES_H)
check_include_file(ncurses/curses.h HAVE_NCURSES_CURSES_H)
check_include_file(ncurses/ncurses.h HAVE_NCURSES_NCURSES_H)
check_include_file(ndir.h HAVE_NDIR_H)
check_include_file(sys/cdrom.h HAVE_SYS_CDROM_H)
check_include_file(sys/dir.h HAVE_SYS_DIR_H)
check_include_file(sys/ioctl.h HAVE_SYS_IOCTL_H)
check_include_file(sys/ndir.h HAVE_SYS_NDIR_H)
check_include_file(sys/soundcard.h HAVE_SYS_SOUNDCARD_H)
check_include_file(sys/time.h HAVE_SYS_TIME_H)
check_include_file(sys/wait.h HAVE_SYS_WAIT_H)
check_include_file(unistd.h HAVE_UNISTD_H)
check_include_file(curses.h HAVE_CURSES_H)

check_function_exists(gethostname HAVE_GETHOSTNAME)
check_function_exists(gettimeofday HAVE_GETTIMEOFDAY)
check_function_exists(memcpy HAVE_MEMCPY)
check_function_exists(mkfifo HAVE_MKFIFO)
check_function_exists(mmap HAVE_MMAP)
check_function_exists(select HAVE_SELECT)
check_function_exists(strchr HAVE_STRCHR)
check_function_exists(strerror HAVE_STRERROR)
check_function_exists(strstr HAVE_STRSTR)
check_function_exists(strtol HAVE_STRTOL)
check_function_exists(vprintf HAVE_VPRINTF)

test_big_endian(CTH_WORDS_BIGENDIAN)
set(STDC_HEADERS 1)
set(TIME_WITH_SYS_TIME 1)
set(WITH_SAVER 0)

find_package(Curses QUIET)
find_package(Threads REQUIRED)
if(CURSES_FOUND)
    set(HAVE_NCURSES 1)
else()
    set(HAVE_NCURSES 0)
endif()

if(CTH_ENABLE_DSP AND (HAVE_LINUX_SOUNDCARD_H OR HAVE_SYS_SOUNDCARD_H))
    set(WITH_DSP 1)
else()
    set(WITH_DSP 0)
endif()

if(CTH_ENABLE_MIXER AND (HAVE_LINUX_SOUNDCARD_H OR HAVE_SYS_SOUNDCARD_H))
    set(WITH_MIXER 1)
else()
    set(WITH_MIXER 0)
endif()

if(CTH_ENABLE_CDROM AND (HAVE_LINUX_CDROM_H OR HAVE_SYS_CDROM_H))
    set(WITH_CDROM 1)
else()
    set(WITH_CDROM 0)
endif()

find_package(PkgConfig QUIET)
if(CTH_ENABLE_PULSE AND PkgConfig_FOUND)
    pkg_check_modules(PULSE libpulse-simple)
endif()
if(CTH_ENABLE_PULSE AND PULSE_FOUND)
    set(WITH_PULSE 1)
else()
    set(WITH_PULSE 0)
endif()

if(CTH_ENABLE_MINIMP3)
    set(WITH_MINIMP3 1)
else()
    set(WITH_MINIMP3 0)
endif()

set(USE_XPM 0)
if(CTH_BUILD_X11)
    find_package(X11 REQUIRED)
    find_package(ZLIB REQUIRED)

    foreach(required_x11_lib X11_Xext_LIB X11_Xt_LIB X11_Xaw_LIB X11_Xmu_LIB)
        if(NOT ${required_x11_lib})
            message(FATAL_ERROR "Required X11 library was not found: ${required_x11_lib}")
        endif()
    endforeach()

    check_include_file_CXX(xpm.h HAVE_XPM_H)
    check_include_file_CXX(X11/xpm.h HAVE_X11_XPM_H)
    if(CTH_ENABLE_XPM AND X11_Xpm_LIB AND (HAVE_XPM_H OR HAVE_X11_XPM_H))
        set(USE_XPM 1)
    endif()
endif()

if(CTH_WORDS_BIGENDIAN)
    set(WORDS_BIGENDIAN 1)
endif()

configure_file(
    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/config.h.in
    ${CMAKE_CURRENT_BINARY_DIR}/config.h
)

add_subdirectory(src)

if(CTH_BUILD_TAB_TOOLS)
    add_subdirectory(tab)
endif()

install(DIRECTORY pcx/ DESTINATION ${CTH_DATA_DIR}/pcx)
install(DIRECTORY map/ DESTINATION ${CTH_DATA_DIR}/map
        FILES_MATCHING PATTERN "*.map")
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/map/png")
    install(DIRECTORY map/png/ DESTINATION ${CTH_DATA_DIR}/map/png)
endif()

message(STATUS "")
message(STATUS "CthughaNix modern CMake summary")
message(STATUS "  X11 frontend       : ${CTH_BUILD_X11}")
message(STATUS "  Pulse output       : ${WITH_PULSE}")
message(STATUS "  OSS DSP input/output: ${WITH_DSP} (${CTH_DEV_DSP})")
message(STATUS "  OSS mixer          : ${WITH_MIXER} (${CTH_DEV_MIXER})")
message(STATUS "  CD-ROM controls    : ${WITH_CDROM} (${CTH_DEV_CDROM})")
message(STATUS "  minimp3 decoder    : ${WITH_MINIMP3}")
message(STATUS "  XPM screenshots    : ${USE_XPM}")
message(STATUS "  Runtime data dir   : ${CTH_DATA_DIR}")
